--- a/app/views/user/blogs/blogs.css
+++ b/app/views/user/blogs/blogs.css
@@ -17,7 +17,7 @@ body {
 }
 
 .banner {
-  background-image: url("assets/image_items_bg.png");
+  background-image: url("../../../../assets/image_items_bg.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
