--- a/assets/components/style.css
+++ b/assets/components/style.css
@@ -1,4 +1,3 @@
-
 *,
 *::before,
 *::after {
@@ -10,10 +9,10 @@
 :root {
   --primary-font: "Roboto", sans-serif;
   --secondary-font: "Space Mono", serif;
-  --color-beige: #FFF8EE;
-  --color-red: #CC3333;
-  --color-darkblue: #2A435D;
-  --color-green: #4BFF3C;
+  --color-beige: #fff8ee;
+  --color-red: #cc3333;
+  --color-darkblue: #2a435d;
+  --color-green: #4bff3c;
   --color-textwhite: #ffffff;
 }
 
@@ -31,7 +30,6 @@ a {
 }
 a:hover {
   text-decoration: underline;
-  
 }
 
 button,
@@ -87,8 +85,8 @@ img {
   background-color: var(--color-red);
   color: var(--color-textwhite);
 }
-.btn-login{
-    width: 90px;
+.btn-login {
+  width: 90px;
 }
 
 /* header */
@@ -107,11 +105,11 @@ header {
 
 header ul {
   display: flex;
-    gap: 40px;
+  gap: 40px;
 }
 header nav a {
-    font-size: 20px;
-    font-weight: 700;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 .header-right {
@@ -120,20 +118,18 @@ header nav a {
   gap: 50px;
 }
 
-
-
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
 }
 
 .nav-links {
-    display: flex;
-    gap: 40px;
-    flex-direction: row; /* Horizontal by default */
-    margin-top: 0;
+  display: flex;
+  gap: 40px;
+  flex-direction: row; /* Horizontal by default */
+  margin-top: 0;
 }
 .nav-links a:hover {
   text-decoration: none;
@@ -157,66 +153,73 @@ nav {
 
 /* Hamburger icon styling */
 .hamburger {
-    display: none;
-    cursor: pointer;
-    width: 60px;
-    height: 60px;
+  display: none;
+  cursor: pointer;
+  width: 60px;
+  height: 60px;
 }
 /* end header */
 
-
-
-
-
 /* footer */
-footer{
-    background-color: var(--color-darkblue);
-    color: var(--color-textwhite);
-    padding: 40px 50px 20px;
+footer {
+  background-color: var(--color-darkblue);
+  color: var(--color-textwhite);
+  padding: 40px 50px 20px;
 }
 
-.footer-content{
-    display: flex;
-    justify-content: space-between;
-    gap: 40px;
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
 }
-.footer-contact-us, .subscribe-title1{
-    font-size:30px;
-    font-weight: 700;
+.footer-contact-us,
+.subscribe-title1 {
+  font-size: 30px;
+  font-weight: 700;
 }
-.address, .hotline, .service, .subscribe-title2, .copyright{
-    font-size: 23px;
-    font-weight: 700;
-}
-
-.branchs,.address, .store-info, .open-hour, .phone-num, .hotline, .service, .media-links ul{
-    display: flex;
-    gap: 10px;
-}
-.branchs{
-    justify-content: center;
-}
-.contact{
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-}
-.branchs, .main-footer{
-    flex-direction: column;
-    gap: 30px;
-    
+.address,
+.hotline,
+.service,
+.subscribe-title2,
+.copyright {
+  font-size: 23px;
+  font-weight: 700;
 }
 
-.subscribe, .subscribe-title{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
+.branchs,
+.address,
+.store-info,
+.open-hour,
+.phone-num,
+.hotline,
+.service,
+.media-links ul {
+  display: flex;
+  gap: 10px;
 }
-.subcribe{
-    gap: 30px;
+.branchs {
+  justify-content: center;
+}
+.contact {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.branchs,
+.main-footer {
+  flex-direction: column;
+  gap: 30px;
 }
 
+.subscribe,
+.subscribe-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.subcribe {
+  gap: 30px;
+}
 
 .subscribe-form {
   margin-top: 40px;
@@ -232,89 +235,75 @@ footer{
   gap: 12px;
 }
 
-
 .btn.btn-subscribe {
   position: absolute;
   right: 0;
   width: 172px;
   height: 60px;
   border-radius: 20px;
-
 }
 
-
-
-
-.copyright{
-    margin-top: 40px;
-    text-align: center;
+.copyright {
+  margin-top: 40px;
+  text-align: center;
 }
-
-
-
-
-
-
 
 /* end footer */
 
 /*responsive*/
 
-
 /* desktop small */
-@media screen and (max-width: 1280px){
-  .header-right .image{
+@media screen and (max-width: 1280px) {
+  .header-right .image {
     display: none;
-  } 
+  }
 }
 
 /* tablet */
 @media screen and (max-width: 1024px) {
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        gap: 20px;
-        align-items: center;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 150px;
-        transform: translateX(-30%);
-        border-radius: 10px;
-        background-color: var(--color-beige);
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        padding: 10px 0;
-        z-index: 10;
-    }
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 150px;
+    transform: translateX(-30%);
+    border-radius: 10px;
+    background-color: var(--color-beige);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 10px 0;
+    z-index: 10;
+  }
 
-    .hamburger {
-        display: block;
-        position: relative;
-        
-        z-index: 20;
-    }
+  .hamburger {
+    display: block;
+    position: relative;
 
-    .footer-content{
-        flex-direction: column;
-        gap: 20px;
-        align-items: center;
-        justify-content: space-around;
-    }
-    
+    z-index: 20;
+  }
+
+  .footer-content {
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: space-around;
+  }
 }
 
 nav.open .nav-links {
-    display: flex;
+  display: flex;
 }
-
 
 /* mobile */
 @media screen and (max-width: 768px) {
-    .hamburger {
-        width: 40px;
-        height: 40px;
-    }
-    .header-right{
-      gap: 30px;
-    }
+  .hamburger {
+    width: 40px;
+    height: 40px;
+  }
+  .header-right {
+    gap: 30px;
+  }
 }
