--- a/app/views/user/register/register.css
+++ b/app/views/user/register/register.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Roboto;
-  background-image: url("../../../../assets/login-bg.png");
+  background-image: url('../../../../assets/login-bg.png');
   background-repeat: no-repeat;
   background-color: rgb(0, 0, 0);
   padding-right: 0;
@@ -35,27 +35,20 @@ body {
   align-items: center;
 }
 
-input {
+input,
+select {
   border-radius: 6px;
   border: 1.2px solid #2a435d;
+  outline: none;
+  height: 27px;
 }
 
-input[type="checkbox"] {
-  appearance: none;
-  width: 18px;
-  height: 18px;
-  background: transparent;
-  border: 1.5px solid #2a435d;
-  cursor: pointer;
-}
-
-input[type="checkbox"]:checked::after {
-  content: "✓";
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: #2a435d;
+  text-decoration: none;
   font-size: 16px;
-  color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
+  font-weight: 500;
 }
