--- a/app/views/user/login/login.css
+++ b/app/views/user/login/login.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Roboto;
-  background-image: url("../../../../assets/login-bg.png");
+  background-image: url('../../../../assets/login-bg.png');
   background-repeat: no-repeat;
   background-color: rgb(0, 0, 0);
   padding-right: 0;
@@ -37,9 +37,11 @@ body {
 input {
   border-radius: 6px;
   border: 1.2px solid #2a435d;
+  outline: none;
+  height: 27px;
 }
 
-input[type="checkbox"] {
+input[type='checkbox'] {
   appearance: none;
   width: 18px;
   height: 18px;
@@ -48,8 +50,8 @@ input[type="checkbox"] {
   cursor: pointer;
 }
 
-input[type="checkbox"]:checked::after {
-  content: "✓";
+input[type='checkbox']:checked::after {
+  content: '✓';
   font-size: 16px;
   color: black;
   display: flex;
@@ -57,4 +59,18 @@ input[type="checkbox"]:checked::after {
   align-items: center;
   width: 100%;
   height: 100%;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: #2a435d;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+input[type='submit']:hover {
+  cursor: pointer;
 }
