--- a/app/views/user/login/login.css
+++ b/app/views/user/login/login.css
@@ -1,23 +1,3 @@
-body {
-  margin: 0;
-  font-family: Roboto;
-  background-image: url('../../../../assets/login-bg.png');
-  background-repeat: no-repeat;
-  background-color: rgb(0, 0, 0);
-  padding-right: 0;
-  padding-left: 54%;
-}
-
-.container {
-  background-color: #cc3333;
-  border-top-left-radius: 40px;
-  border-bottom-left-radius: 40px;
-  height: 100vh;
-  box-shadow: -15px 0 rgba(25, 25, 25, 0.5);
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-}
-
 .potato-icon {
   grid-column: 3/4;
   padding-right: 10px;
@@ -32,6 +12,13 @@ body {
   align-items: center;
   color: white;
   font-size: 17px;
+}
+
+.main-login form {
+  display: flex;
+  flex-flow: column;
+  gap: 10px;
+  width: 100%;
 }
 
 input {
@@ -73,4 +60,47 @@ a:active {
 
 input[type='submit']:hover {
   cursor: pointer;
+}
+
+/* mobile: width < 740px */
+@media only screen and (max-width: 739px) {
+  body {
+    margin: 0;
+    font-family: Roboto;
+    background-image: url('../../../../assets/components/images/login-bg.png');
+    background-repeat: no-repeat;
+    background-color: rgb(0, 0, 0);
+  }
+  .container {
+    background-color: #cc3333;
+    height: 90vh;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    box-shadow: 0 -15px rgba(25, 25, 25, 0.5);
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    margin-top: 10vh;
+  }
+}
+
+/* width >= 740px */
+@media only screen and (min-width: 739px) {
+  body {
+    margin: 0;
+    font-family: Roboto;
+    background-image: url('../../../../assets/components/images/login-bg.png');
+    background-repeat: no-repeat;
+    background-color: rgb(0, 0, 0);
+    padding-right: 0;
+    padding-left: 54%;
+  }
+  .container {
+    background-color: #cc3333;
+    border-top-left-radius: 40px;
+    border-bottom-left-radius: 40px;
+    height: 100vh;
+    box-shadow: -15px 0 rgba(25, 25, 25, 0.5);
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+  }
 }
